--- a/DigitalDesign.html
+++ b/DigitalDesign.html
@@ -2,18 +2,23 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Home Page</title>
+<title>Untitled Document</title>
 </head>
 
 <body>
-<nav>
+	<nav>
 	<a href = "index.html">Home Page</a> <br>
 	<a href = "WCP.html">WCP</a><br>
 	<a href = "DigitalDesign.html">Digital Design</a><br>
 	<a href = "VisualDesign.html">Visual Design</a><br>
 	<a href = "AboutMe.html">About Me</a>
 </nav>
-<h1> Welcome to [Giana W.] Home Page!</h1>
+	<h1> This is the Digital Design Page</h1>
+	<a href= "Labs/lab1.html"> Lab 1 Basic HTML Tags</a>
 	
+	<br>
+	
+	<a href= "Labs/lab2.html"> Lab 2 Basic HTML Tags</a>
+
 </body>
 </html>
