--- a/DigitalDesign.html
+++ b/DigitalDesign.html
@@ -18,7 +18,26 @@
 	
 	<br>
 	
-	<a href= "Labs/lab2.html"> Lab 2 Basic HTML Tags</a>
+	<a href= "Labs/lab2.html"> Lab 2 Html Images</a>
 
+	<br>
+	
+	<a href= "Labs/lab3.html"> Lab 3 Hyperlinks</a>
+	
+	<br>
+	
+	<a href= "Labs/lab4.html"> Lab 4 List</a>
+	
+	<br>
+	
+	<a href= "Labs/lab5.html"> Lab 5 Inline Style</a>
+	
+	<br>
+	
+	<a href= "Labs/lab6.html"> Lab 6 Adding Videos</a>
+	
+	<br>
+	
+	<a href= "Labs/lab7.html"> Lab 7 Divs,Ids, and Page Anchors</a>
 </body>
 </html>
