--- a/Labs/lab5.html
+++ b/Labs/lab5.html
@@ -4,14 +4,21 @@
 <meta charset="UTF-8">
 <title>Inline Style</title>
 	<style>
-		body{background-color:darkseagreen;
+		body{background-color:#FFFAFA
+			;
 		}
-	
-	
+
 	
 	</style>
 </head>
 
 <body>
+	
+	<h3><span style="color:red"> RED </span></h3>
+		<h3><span style="color:orange"> ORANGE </span></h3>
+	<h3><span style="color:#FFD700"> YELLOW </span></h3>
+		<h3><span style="color:green"> GREEN </span></h3>
+		<h3><span style="color:blue"> BLUE </span></h3>
+		<h3><span style="color:purple"> PURPLE </span></h3>
 </body>
 </html>
