--- a/DigitalDesign.html
+++ b/DigitalDesign.html
@@ -38,6 +38,6 @@
 	
 	<br>
 	
-	<a href= "Labs/lab7.html"> Lab 7 Divs,Ids, and Page Anchors</a>
+	<a href= "Labs/lab7index.html"> Lab 7 Divs,Ids, and Page Anchors</a>
 </body>
 </html>
