--- a/Labs/lab6.html
+++ b/Labs/lab6.html
@@ -8,7 +8,7 @@
 <iframe width="320" height="215" src="https://www.youtube.com/embed/7p6v5W20Aps"> Cat Video 1 </iframe>
 	<br>
 	
-	<iframe width="320" height="215" src="https://www.youtube.com/embed/7p6v5W20Aps"> Cat Video 2 </iframe>
+	<iframe width="320" height="215" src="https://www.youtube.com/embed/FSh3A8ds7no"> Cat Video 2 </iframe>
 	
 	
 	
