--- a/Labs HTML/lab3.html
+++ b/Labs HTML/lab3.html
@@ -13,10 +13,10 @@
 	
 	<p>CONTACT THEM HERE:</p>
 	
-	<a href="pam@safehavenforcats.org">pam@safehavenforcats.org</a>
+	<a href="../Labs/pam@safehavenforcats.org">pam@safehavenforcats.org</a>
 	
 	<br>
-	<a href="919.582.7834
+	<a href="../Labs/919.582.7834
 
 ">919.582.7834</a>
 </body>
