--- a/Labs HTML/lab7services.html
+++ b/Labs HTML/lab7services.html
@@ -14,13 +14,13 @@
 <body>
 	
 
-<a href = "lab7index.html"> Home Page </a>
+<a href = "../Labs/lab7index.html"> Home Page </a>
 <br>
-<a href = "lab7products.html"> Food Menu </a>
+<a href = "../Labs/lab7products.html"> Food Menu </a>
 <br>
-<a href = "lab7services.html"> Drink Menu </a>
+<a href = "../Labs/lab7services.html"> Drink Menu </a>
 <br>
-<a href = "lab7aboutus.html"> About Us </a>
+<a href = "../Labs/lab7aboutus.html"> About Us </a>
 <br>
 
 	 <h1>~ Drink Menu ~ </h1>
