--- a/DigitalDesign.html
+++ b/DigitalDesign.html
@@ -13,20 +13,30 @@
 	<a href = "VisualDesign.html">Visual Design</a><br>
 	<a href = "AboutMe.html">About Me</a>
 </nav>
+	
 	<h1> This is the Digital Design Page</h1>
-	<a href= "Labs/lab1.html"> Lab 1 Basic HTML Tags</a>
+
+	<div style= "width: 100%; display: table;"> 
+		
+	<div style= "display: table-row: height; 100px;">
+		
+	<div style= "width: 50%; display: table-cell;">
+		
+	<h2> HTML</h2>
+		
+	<a href= "Labs HTML/lab1.html"> Lab 1 Basic HTML Tags</a>
 	
 	<br>
 	
-	<a href= "Labs/lab2.html"> Lab 2 Html Images</a>
+	<a href= "Labs HTML/lab2.html"> Lab 2 Html Images</a>
 
 	<br>
 	
-	<a href= "Labs/lab3.html"> Lab 3 Hyperlinks</a>
+	<a href= "Labs HTML/lab3.html"> Lab 3 Hyperlinks</a>
 	
 	<br>
 	
-	<a href= "Labs/lab4.html"> Lab 4 List</a>
+	<a href= "Labs HTML/lab4.html"> Lab 4 List</a>
 	
 	<br>
 	
@@ -34,10 +44,50 @@
 	
 	<br>
 	
-	<a href= "Labs/lab6.html"> Lab 6 Adding Videos</a>
+	<a href= "Labs HTML/lab6.html"> Lab 6 Adding Videos</a>
 	
 	<br>
 	
-	<a href= "Labs/lab7index.html"> Lab 7 Divs,Ids, and Page Anchors</a>
+	<a href= "Labs HTML/lab7index.html"> Lab 7 Divs,Ids, and Page Anchors</a>
+		
+	</div>
+		
+	<div style="display:table-cell;">
+		
+	<h2> CSS</h2>
+		
+		<a href= "Labs CSS/lab1.html"> Lab 1 Basic CSS Tags</a>
+	
+	<br>
+	
+	<a href= "Labs CSS/lab2.html"> Lab 2 CSS Selectors</a>
+
+	<br>
+	
+	<a href= "Labs CSS/lab3.html"> Lab 3 CSS Borders</a>
+	
+	<br>
+	
+	<a href= "Labs CSS/lab4.html"> Lab 4 CSS Background Images</a>
+	
+	<br>
+	
+	<a href= "Labs CSS/lab5.html"> Lab 5 CSS Click Hover Effect</a>
+	
+	<br>
+	
+	<a href= "Labs CSS/lab6.html"> Lab 6 CSS Transitions</a>
+	
+	<br>
+	
+	<a href= "Labs CSS/lab7index.html"> Lab 7 Divs,Ids, and Page Anchors</a>
+		
+		
+		
+		
+	</div>
+	</div>
+	</div>
+	
 </body>
 </html>
