--- a/Labs HTML/Labs CSS/lab3.html
+++ b/Labs HTML/Labs CSS/lab3.html
@@ -3,8 +3,41 @@
 <head>
 <meta charset="UTF-8">
 <title>Untitled Document</title>
+	<style> 
+          
+  .lightskyblue-border{
+  border-style: dotted;
+  border-color: lightskyblue;
+  width: 400px;
+}
+  
+
+ .yellow-border{
+  border-style: solid;
+  border-color: yellow;
+  width: 400px;
+}
+
+  .pink-border{
+  border-style: dotted;
+  border-color: pink;
+  width: 400px;
+}
+
+	</style>
+
 </head>
 
 <body>
+<h2> Part 1 </h2>
+<img src = "../../Healthy-Kittens.jpg" width="200" class="lightskyblue-border">
+
+<h2> Part 2 </h2>
+ 
+<img src = "../../Healthy-Kittens.jpg" width="200" class="yellow-border">
+
+<h2> Part 3 </h2>
+<img src = "../../Healthy-Kittens.jpg" width="200" class="pink-border">
+
 </body>
 </html>
