--- a/Labs HTML/Labs CSS/lab6.html
+++ b/Labs HTML/Labs CSS/lab6.html
@@ -3,30 +3,83 @@
 <head>
 <meta charset="UTF-8">
 <title>Untitled Document</title>
-	<style> 
-       
+<style>
+		/*Write your CSS code here*/
+		div {
+			width: 100px;
+			height: 100px;
+			border: 3px solid blue;
+      font-size:100px;
+		}
 
-    span{
-      color:pink;
-      font-size:75px;
-      font-family:'Didot', serif;
+    .Iclass{
+      transition: height 2s, background-color 4s;
+      color:black;
+    }
+    .Iclass:hover{
+      background-color:pink;
+      height: 200px;
+      width:200px;
     }
 
-    
-    </style>
+    .Gclass{
+      transition: width 4s, background-color 2s;
+    }
+    .Gclass:hover{
+      background-color:orange;
+      width:600px;
+    }
+
+    		}
+
+    .Aclass{
+      transition: height 2s, background-color 4s;
+      color:black;
+    }
+    .Aclass:hover{
+      background-color:pink;
+      height: 200px;
+      width:200px;
+    }
+
+		}
+
+    .Nclass{
+      transition: height 2s, background-color 4s;
+      color:black;
+    }
+    .Nclass:hover{
+      background-color:pink;
+      height: 200px;
+      width:200px;
+    }
+
+    		}
+
+    .Aclass{
+      transition: height 2s, background-color 4s;
+      color:black;
+    }
+    .Aclass:hover{
+      background-color:pink;
+      height: 200px;
+      width:200px;
+    }
+	</style>
+
 
 </head>
 
 
 <body>
 	
-	<div>
-<p><span>G</span> orgeous </p>
-<p><span>I</span> nspirational  </p>
-<p><span>A</span> nxious  </p>
-<p><span>N</span> ice  </p>
-<p><span>A</span> wesome </p>
-</div>
+	<p>Hover over each letter to see the transition effect:</p>
+
+	<div class = "Gclass">G</div>
+  <div class = "Iclass">I</div>
+    <div class ="Aclass">A</div>
+  <div class = "Nclass">N</div>
+  <div class = "Aclass">A</div>
 
 
 
