--- a/Labs HTML/Labs CSS/lab4.html
+++ b/Labs HTML/Labs CSS/lab4.html
@@ -3,9 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <title>Untitled Document</title>
-	<body>
+<style>
 	
+	body { background-image:url("https://thumbs.dreamstime.com/b/vector-simple-primitive-floral-seamless-pattern-cute-endless-print-flowers-drawn-hand-sketch-doodle-scribble-summer-spring-224496213.jpg");
+	background-size 200px;
+	}
 	
-	</body>
+	</style>
 	</head>
 </html>
+
+ 
+  <body>
+    <p> here are pretty flowers :) </p>
+ 
+	</body>
+	
