ogrady fri commit

--- a/LabsHTML/lab1.html
+++ b/LabsHTML/lab1.html
@@ -5,6 +5,9 @@
 <title>Untitled Document</title>
 </head>
 
+	
+<body>
+	
 	<h1> About Giana Williams </h1>
 
     <p> Hi, my name is Giana Williams, also known as Giana Banana. I am a student at Bronx early college academy.I am currently 16 years old. </p>
@@ -19,8 +22,7 @@
 	<br> 
 	
 	<a href= "../DigitalDesign.html"> Digital Design </a>
-	
-	
-<body>
+	<br>
+	<a href= "../Labs HTML/Labs HTML/lab2.html"> Lab 2 Basic HTML Tags</a>
 </body>
 </html>
