--- a/LabsHTML/lab3.html
+++ b/LabsHTML/lab3.html
@@ -19,5 +19,14 @@
 	<a href="../Labs/919.582.7834
 
 ">919.582.7834</a>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	
+	<a href= "../DigitalDesign.html"> Digital Design </a>
+	<br>
+	<a href= "../Labs HTML/Labs HTML/lab4.html"> Lab 4 Basic HTML Tags</a>
 </body>
 </html>
