--- a/LabsHTML/lab4.html
+++ b/LabsHTML/lab4.html
@@ -4,7 +4,10 @@
 <meta charset="UTF-8">
 <title> List</title>
 </head>
-<h1>List of States Ive Been To</h1>
+
+<body>
+	
+	<h1>List of States Ive Been To</h1>
 	<ul style="lists-style-type:square;">
 	<li>California</li>
 	<li>Connecticut</li>
@@ -24,6 +27,9 @@
 	<li>Vermont</li>
 	<li>Virginia</li>
 	</ul>
-<body>
+	
+	<a href= "../DigitalDesign.html"> Digital Design </a>
+	<br>
+	<a href= "../Labs HTML/Labs HTML/lab5.html"> Lab 5 Basic HTML Tags</a>
 </body>
 </html>
