--- a/LabsHTML/lab7aboutus.html
+++ b/LabsHTML/lab7aboutus.html
@@ -36,9 +36,16 @@
 
 <a href = "mailto: DelightsBakery@giana.com"> Email Us! </a>
 <br>
-<br>
+
 <a href = "tel: 180033544482"> Call Us At 1-800-delightb </a>
 
-
+<br>
+	<br>
+	<br>
+	<br>
+	
+	<a href= "../DigitalDesign.html"> Digital Design </a>
+	<br>
+	<a href= "../Labs HTML/Labs HTML/lab7index.html"> Back to Index</a>
 </body>
 </html>
