--- a/DigitalDesign.html
+++ b/DigitalDesign.html
@@ -22,41 +22,45 @@
 		
 	<div style= "width: 50%; display: table-cell;">
 		
+		
+		<br>
 	<h2> HTML</h2>
 		
-	<a href= "Labs HTML/lab1.html"> Lab 1 Basic HTML Tags</a>
+	<a href= "LabsHTML/lab1.html"> Lab 1 Basic HTML Tags</a>
 	
 	<br>
 	
-	<a href= "Labs HTML/lab2.html"> Lab 2 Html Images</a>
+	<a href= "LabsHTML/lab2.html"> Lab 2 Html Images</a>
 
 	<br>
 	
-	<a href= "Labs HTML/lab3.html"> Lab 3 Hyperlinks</a>
+	<a href= "LabsHTML/lab3.html"> Lab 3 Hyperlinks</a>
 	
 	<br>
 	
-	<a href= "Labs HTML/lab4.html"> Lab 4 List</a>
+	<a href= "LabsHTML/lab4.html"> Lab 4 List</a>
 	
 	<br>
 	
-	<a href= "Labs/lab5.html"> Lab 5 Inline Style</a>
+	<a href= "Labs HTML/lab5.html"> Lab 5 Inline Style</a>
 	
 	<br>
 	
-	<a href= "Labs HTML/lab6.html"> Lab 6 Adding Videos</a>
+	<a href= "LabsHTML/lab6.html"> Lab 6 Adding Videos</a>
 	
 	<br>
 	
-	<a href= "Labs HTML/lab7index.html"> Lab 7 Divs,Ids, and Page Anchors</a>
+	<a href= "LabsHTML/lab7index.html"> Lab 7 Divs,Ids, and Page Anchors</a>
 		
 	</div>
+		
+	
 		
 	<div style="display:table-cell;">
 		
 	<h2> CSS</h2>
 		
-		<a href= "Labs CSS/lab1.html"> Lab 1 Basic CSS Tags</a>
+	<a href= "Labs CSS/lab1.html"> Lab 1 Basic CSS Tags</a>
 	
 	<br>
 	
