--- a/LabsHTML/lab2.html
+++ b/LabsHTML/lab2.html
@@ -18,6 +18,9 @@
 	
 	<br>
 	
+	<a href= "../DigitalDesign.html"> Digital Design </a>
+	<br>
+	<a href= "../Labs HTML/Labs HTML/lab3.html"> Lab 3 Basic HTML Tags</a>
 	
 </body>
 </html>
