--- a/DigitalDesign.html
+++ b/DigitalDesign.html
@@ -42,7 +42,7 @@
 	
 	<br>
 	
-	<a href= "Labs HTML/lab5.html"> Lab 5 Inline Style</a>
+	<a href= "LabsHTML/lab5.html"> Lab 5 Inline Style</a>
 	
 	<br>
 	
@@ -60,31 +60,31 @@
 		
 	<h2> CSS</h2>
 		
-	<a href= "LabsCSS/lab1.html"> Lab 1 Basic CSS Tags</a>
+	<a href= "LabsHTML/LabsCSS/lab1.html"> Lab 1 Basic CSS Tags</a>
 	
 	<br>
 	
-	<a href= "LabsCSS/lab2.html"> Lab 2 CSS Selectors</a>
+	<a href= "LabsHTML/LabsCSS/lab2.html"> Lab 2 CSS Selectors</a>
 
 	<br>
 	
-	<a href= "LabsCSS/lab3.html"> Lab 3 CSS Borders</a>
+	<a href= "LabsHTML/LabsCSS/lab3.html"> Lab 3 CSS Borders</a>
 	
 	<br>
 	
-	<a href= "LabsCSS/lab4.html"> Lab 4 CSS Background Images</a>
+	<a href= "LabsHTML/LabsCSS/lab4.html"> Lab 4 CSS Background Images</a>
 	
 	<br>
 	
-	<a href= "LabsCSS/lab5.html"> Lab 5 CSS Click Hover Effect</a>
+	<a href= "LabsHTML/LabsCSS/lab5.html"> Lab 5 CSS Click Hover Effect</a>
 	
 	<br>
 	
-	<a href= "LabsCSS/lab6.html"> Lab 6 CSS Transitions</a>
+	<a href= "LabsHTML/LabsCSS/lab6.html"> Lab 6 CSS Transitions</a>
 	
 	<br>
 	
-	<a href= "LabsCSS/lab7index.html"> Lab 7 Divs,Ids, and Page Anchors</a>
+	<a href= "LabsHTML/LabsCSS/lab7.html"> Lab 7 Divs,Ids, and Page Anchors</a>
 		
 		
 		
