--- a/LabsHTML/LabsCSS/lab4.html
+++ b/LabsHTML/LabsCSS/lab4.html
@@ -5,17 +5,43 @@
 <title>Untitled Document</title>
 <style>
 	
-	body { background-image:url("https://thumbs.dreamstime.com/b/vector-simple-primitive-floral-seamless-pattern-cute-endless-print-flowers-drawn-hand-sketch-doodle-scribble-summer-spring-224496213.jpg");
-	background-size 200px;
+	.fixed-bg {
+		background-image:url("../../pinkflowers.jpg");
+		min-height : 500px;
+		background-attachment:fixed;
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: cover;
+
 	}
 	
+	h1{
+		text-align:center;
+	}
+	
+	h1:hover{
+		color:lightpink
+	}
 	</style>
 	</head>
 </html>
 
  
   <body>
-    <p> here are pretty flowers :) </p>
+	  <div class="fixed-bg"><h1>Origin of Roses</h1></div>
+
+<div style="height:400px;background-color:lightpink;">Fossil records show rose to be one of the most ancient of flowers. It probably originated in Central Asia but spread and grew wild over nearly the entire northern hemisphere. Two historical geographical groupings of roses can be made: 1) European/Mediteranean roses, which includes the Gallicas, Albas, Damasks, Damask Perpetuals, Centifolias and Mosses, and 2) Oriental roses, which are represented by the China and Tea roses.
+
+The cultivation of roses likely began in Asia about 5000 years ago and they have been an intimate part of human civilization ever since. Confucius wrote of growing roses in the Imperial Gardens about 500 B.C. and mentioned that the emperor’s library contained hundreds of books on the subject of roses. Later, members of the Han dynasty were so obsessed with roses that their parks devoted to this flower took up so much land as to threaten the food supply, so the emperor ordered some to be plowed under.
+
+Paintings on walls and other artifacts depicting roses were found in 5th century Egyptian tombs. It is said that Cleopatra was a fancier of roses and used them to try and seduce Mark Anthony. Reportedly she had her fountain filled with rose water and her chamber filled with two feet of rose petals in an attempt to win his affection. Additionally, the Persian King Nebuchadnezzar is said to have slept on a mattress filled with rose petals.
+
+Centuries later, rose became synonymous with the lavish excesses often characteristic of the Romans, who associated rose with love, beauty, purity and passion. Roman emperors filled their baths with rose water and sat on carpets of rose petals for their feasts. Rose petals were used as confetti and Nero was said to be especially fond of having them fall from the ceiling at banquets (to the point dinner guest sometimes suffocated in their excess). So insatiable was the demand for roses that peasants often were forced to grow them instead of food just to satisfy the Roman aristocracy.
+
+Early Christians considered rose to be symbolic of paganism and their oppressors, the Romans, and were warned by church leaders not to plant it. This warning (evidently) was ignored and it slowly gained popularity and was used in religious ceremonies. In time, rose became a Christian symbol and has become a rich part of its culture and literature.  </div>
+	  
+
+	  
  
 	</body>
 	
