--- a/VisualDesign.html
+++ b/VisualDesign.html
@@ -15,6 +15,40 @@
 </nav>
 	
 	<h1> This is the Visual Design Page</h1>
+	
 
+
+	<a href= "VisualDesignFiles/Contourline.html"> Contour Line Portraits</a>
+	
+	<br>
+	
+	
+	<a href= "VisualDesignFiles/Kaleidoscopes.html"> Kaleidoscopes</a>
+	
+	<br>
+	
+	<a href= "VisualDesignFiles/Mandalas.html"> Mandalas</a>
+	
+	<br>
+	
+	<a href= "VisualDesignFiles/Popart.html"> Popart</a>
+	
+	<br>
+	
+	<a href= "VisualDesignFiles/FantasticBeastBattle.html"> Fantastic Beast Battle</a>
+	
+	<br>
+	
+	<a href= "VisualDesignFiles/Snowman.html"> Snow People Vector</a>
+
+	<br>
+	
+	<a href= "VisualDesignFiles/Snowflake.html"> SnowFlake Vector Tracing</a>
+	
+	
+		<br>
+	
+	<a href= "VisualDesignFiles/Celeb.html"> Pop art Today Celebrities </a>
+	
 </body>
 </html>
