--- a/VisualDesignFiles/Contourline.html
+++ b/VisualDesignFiles/Contourline.html
@@ -3,17 +3,40 @@
 <head>
 <meta charset="UTF-8">
 <title>Untitled Document</title>
-</head>
+	
+	<style>
+	
+	.fixed-bg {
+		background-image:url("../Photo on 12-17-21 at 9.14 AM.png");
+		min-height : 500px;
+		background-attachment:fixed;
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: cover;
 
-<body>
-<h2>SnowPeople Vector</h2>
+	}
 	
-<img src="../Photo on 12-17-21 at 9.14 AM.png" width="350" height="260" alt=""/>
+	h1{
+		text-align:center;
+	}
+	
+	h1:hover{
+		color:white
+	}
+	</style>
+	</head>
+	
+
+
+	
+	<body>
+	  <div class="fixed-bg">
+
+		</div>
+
 <h3>Artist Statement</h3>
-	
-	<p>	The photo I used was a photo of myself. It took many times to get that photo because I kept taking pictures and not liking them. The first step I took was to take the picture. I then inserted them into photoshop. Once in photoshop I used the freeform pen tool in order to trace and outline my face. Once that was done, I deleted my background layer and then merged all the rest of my layers together.  Then I went on to google images and grabbed a picture of a sage green color and added that into photoshop as well. I then added my text and moved the layers so it was in the background. Then I erased the text so it wasn't in my face and then I was done. The text I used was my first and middle name because that's what I use for everything.
-</p>
-	
+<div style="height:400px;background-color:white;">The photo I used was a photo of myself. It took many times to get that photo because I kept taking pictures and not liking them. The first step I took was to take the picture. I then inserted them into photoshop. Once in photoshop I used the freeform pen tool in order to trace and outline my face. Once that was done, I deleted my background layer and then merged all the rest of my layers together.  Then I went on to google images and grabbed a picture of a sage green color and added that into photoshop as well. I then added my text and moved the layers so it was in the background. Then I erased the text so it wasn't in my face and then I was done. The text I used was my first and middle name because that's what I use for everything.</div>
+
 	
 	
 	<br>
