--- a/VisualDesignFiles/FantasticBeastBattle.html
+++ b/VisualDesignFiles/FantasticBeastBattle.html
@@ -3,19 +3,44 @@
 <head>
 <meta charset="UTF-8">
 <title>Fantastic Beasts Battle</title>
+	<style>
+	
+	.fixed-bg {
+		background-image:url("../Screen Shot 2021-12-23 at 8.49.58 AM.png");
+		min-height : 500px;
+		background-attachment:fixed;
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: cover;
+
+	}
+	
+	h1{
+		text-align:center;
+	}
+	
+	h1:hover{
+		color:white
+	}
+	</style>
+	
 </head>
 
 <body>
-<h2>Fantastic Beasts Battle</h2>
-	
-<img src="../animal both (1).png" width="385" height="220" alt=""/>
+
+	 <div class="fixed-bg">
+
+		</div>
+
 <h3>Artist Statement</h3>
+<div style="height:400px;background-color:white;">This image shows a couple animals combined together. For the tiger looking thing, I decided to make it all white so I used animals that were all white or mainly white. The first animal I chose was a White Tiger. Then I decided I wanted it to fly so I gave it dove wings. For the last animal I chose a ghost moose. Which is just a white moose. For all my animals I was expected to cut out whatever parts I wanted to use. Therefore I cut out the tigers head, the doves wings and the moose’s body using the object selection tool. I then copied and pasted all those items onto a new layer. Once everything was cut out I started to combine my animal parts to form an animal. I used many different tools to do this. Tools like rotate and scale. Then I switched around the layers to make the animal look a little more natural and I used the blur tool to mesh the animal parts together. When I was done I merged the layers and repeated the next process for my second animal. Which is a sand cat and a red fox with hummingbird wings. Then I added the background and positioned them to how I wanted them to look.I would say my tiger animal can fly and attack other animals just like a tiger would but it just cant run as fast as a normal tiger would. For my second animal, I would say that the sand cat is really good at running really fast and really good at being able to hide in small places. Which benefits them a lot as being a prey animal.</div>
+
 	
-	<p>	This image shows a couple animals combined together. For the tiger looking thing, I decided to make it all white so I used animals that were all white or mainly white. The first animal I chose was a White Tiger. Then I decided I wanted it to fly so I gave it dove wings. For the last animal I chose a ghost moose. Which is just a white moose. For all my animals I was expected to cut out whatever parts I wanted to use. Therefore I cut out the tigers head, the doves wings and the moose’s body using the object selection tool. I then copied and pasted all those items onto a new layer. Once everything was cut out I started to combine my animal parts to form an animal. I used many different tools to do this. Tools like rotate and scale. Then I switched around the layers to make the animal look a little more natural and I used the blur tool to mesh the animal parts together. When I was done I merged the layers and repeated the next process for my second animal. Which is a sand cat and a red fox with hummingbird wings. Then I added the background and positioned them to how I wanted them to look.I would say my tiger animal can fly and attack other animals just like a tiger would but it just cant run as fast as a normal tiger would. For my second animal, I would say that the sand cat is really good at running really fast and really good at being able to hide in small places. Which benefits them a lot as being a prey animal.
-</p>
-	
-	<br>
+
 	<a href = "../VisualDesign.html">Visual Design</a>
+	
+
+
 	
 </body>
 </html>
