--- a/VisualDesignFiles/Celeb.html
+++ b/VisualDesignFiles/Celeb.html
@@ -4,13 +4,43 @@
 <meta charset="UTF-8">
 <title>Untitled Document</title>
 </head>
+<style>
+	
+	.fixed-bg {
+		background-image:url("../Screen Shot 2021-12-23 at 8.45.58 AM.png");
+		min-height : 500px;
+		background-attachment:fixed;
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: cover;
 
-<body>
+	}
 	
-<h2>Popart Today Celebrities</h2>
+	h1{
+		text-align:center;
+	}
 	
-    <img src="../trknightg.png" width="154" height="242" alt=""/>
-<p>	T.R. Knight popart.</p>
+	h1:hover{
+		color:white
+	}
+	</style>
+
+	
+
+
+
+	
+	<body>
+
+	  <div class="fixed-bg">
+
+		</div>
+
+<h3>Artist Statement</h3>
+<div style="height:400px; background-color:white;">T.R. Knight popart.</div>
+
+	
+
 	
 	
 	
